--- a/PracticeSite/PracticeSite.vbproj
+++ b/PracticeSite/PracticeSite.vbproj
@@ -92,12 +92,36 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Form\EncuestaCoordServicio.aspx" />
+    <Content Include="Form\Instrument.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="img\Template\FontHead.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form\EncuestaCoordServicio.aspx.designer.vb">
+      <DependentUpon>EncuestaCoordServicio.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Form\EncuestaCoordServicio.aspx.vb">
+      <DependentUpon>EncuestaCoordServicio.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Form\Instrument.aspx.designer.vb">
+      <DependentUpon>Instrument.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Instrument.aspx.vb">
+      <DependentUpon>Instrument.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Master\Site.Master.designer.vb">
+      <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Master\Site.Master.vb">
+      <DependentUpon>Site.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -128,6 +152,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Master\Site.Master" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
